@@ -145,22 +145,19 @@ public final class LineContains
         } else {
             String goodLine = null;
             line = readLine();
-            while((line != null) && (goodLine == null)) {
-                goodLine = line;
+            if (line == null) {
+                ch = -1;
+            } else {
                 int containsSize = contains.size();
                 for (int i = 0; i < containsSize; i++) {
                     String containsStr = (String) contains.elementAt(i);
                     if (line.indexOf(containsStr) == -1) {
-                        goodLine = null;
+                        line = null;
                         break;
                     }
                 }
-                line = readLine();
-            }
-            if (goodLine != null) {
-                line = goodLine;
                 return read();
-            };
+            }
         }
 
         return ch;
