@@ -22,6 +22,8 @@ Fixed bugs:
 
 * <xslt>'s outputtype attribute wouldn't do anything.
 
+* <linecontains> filterreader could swallow lines.
+
 Other changes:
 --------------
 
